--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title></title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="hero-image">
+            <h1 id="hero-text">Welcome to Egypt</h1>
+        </div>
+    </header>
 </body>
 </html>
