Added main section and css link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Egypt</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <header>
@@ -19,5 +20,17 @@
             <h1 id="hero-text">Welcome to Egypt</h1>
         </div>
     </header>
+    <main>
+        <div>
+            <h1>Traveling to Egypt</h1>
+            <section>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates quibusdam voluptate fuga laudantium quisquam deserunt dolore! Eligendi totam rerum reprehenderit nihil mollitia perspiciatis tempore sit quisquam debitis, fuga quaerat. Iusto illum eum similique suscipit saepe cum quisquam maxime facere architecto voluptates incidunt aspernatur possimus pariatur asperiores vel sapiente, ipsa reiciendis.</p>
+            </section>
+        </div>
+        <h2>Gallery</h2>
+        <div class="cards">
+            
+        </div>
+    </main>
 </body>
 </html>
