Added Gallery and footer section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <!--Start of the header -->
     <header>
         <nav>
             <ul>
@@ -20,6 +21,8 @@
             <h1 id="hero-text">Welcome to Egypt</h1>
         </div>
     </header>
+    <!--End of the header -->
+    <!-- Start of the main area -->
     <main>
         <div>
             <h1>Traveling to Egypt</h1>
@@ -27,10 +30,23 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates quibusdam voluptate fuga laudantium quisquam deserunt dolore! Eligendi totam rerum reprehenderit nihil mollitia perspiciatis tempore sit quisquam debitis, fuga quaerat. Iusto illum eum similique suscipit saepe cum quisquam maxime facere architecto voluptates incidunt aspernatur possimus pariatur asperiores vel sapiente, ipsa reiciendis.</p>
             </section>
         </div>
+        <!-- Gallery within the main area -->
         <h2>Gallery</h2>
-        <div class="cards">
-            
+        <div class="gallery">
+            <figure class=”gallery__item gallery__item--1">
+                <img src="assets/images/cairo-mosque.jpg" class="gallery__img" alt="cairo-mosque">
+              </figure>
+              <figure class="gallery__item gallery__item--2">
+                <img src="assets/images/castle-alexandria.jpg" class="gallery__img" alt="castle-alexandria">
+              </figure>
+              <figure class="gallery__item gallery__item--3">
+                <img src="assets/images/karnak-temple.jpg" class="gallery__img" alt="karnak-temple">
+              </figure>
         </div>
     </main>
+    <!--Start of the main body -->
+    <footer>
+        Copyright&copyEgypt 2021
+    </footer>
 </body>
 </html>
