Added text to gallery

--- a/index.html
+++ b/index.html
@@ -33,20 +33,27 @@
         <!-- Gallery within the main area -->
         <h2>Gallery</h2>
         <div class="gallery">
+            <!-- <figcaption>The Cario Mosque Egypt.</figcaption> -->
             <figure class=”gallery__item gallery__item--1">
-                <img src="assets/images/cairo-mosque.jpg" class="gallery__img" alt="cairo-mosque">
+                <figcaption>The Cario Mosque Egypt.</figcaption>
+                    <img src="assets/images/cairo-mosque.jpg" class="gallery__img" alt="Image 1">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, quia!</p>
               </figure>
               <figure class="gallery__item gallery__item--2">
-                <img src="assets/images/castle-alexandria.jpg" class="gallery__img" alt="castle-alexandria">
+                <figcaption>Castle-Alexandria.</figcaption>
+                    <img src="assets/images/castle-alexandria.jpg" class="gallery__img" alt="Image 2">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, quia!</p>
               </figure>
               <figure class="gallery__item gallery__item--3">
-                <img src="assets/images/karnak-temple.jpg" class="gallery__img" alt="karnak-temple">
+                <figcaption>The Karnak Temple.</figcaption>
+                    <img src="assets/images/karnak-temple.jpg" class="gallery__img" alt="Image 3">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, quia!</p>
               </figure>
         </div>
     </main>
     <!--Start of the main body -->
     <footer>
-        Copyright&copyEgypt 2021
+        <p></p>Copyright&copyEgypt 2021
     </footer>
 </body>
 </html>
