Added about page content

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/about.html">About</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
@@ -37,23 +37,23 @@
             <figure class=”gallery__item gallery__item--1">
                 <figcaption>The Cario Mosque Egypt.</figcaption>
                     <img src="assets/images/cairo-mosque.jpg" class="gallery__img" alt="Image 1">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, quia!</p>
+                    <p class="gallery-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, quia!</p>
               </figure>
               <figure class="gallery__item gallery__item--2">
-                <figcaption>Castle-Alexandria.</figcaption>
+                <figcaption>Castle Alexandria.</figcaption>
                     <img src="assets/images/castle-alexandria.jpg" class="gallery__img" alt="Image 2">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, quia!</p>
+                    <p class="gallery-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, quia!</p>
               </figure>
               <figure class="gallery__item gallery__item--3">
                 <figcaption>The Karnak Temple.</figcaption>
                     <img src="assets/images/karnak-temple.jpg" class="gallery__img" alt="Image 3">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, quia!</p>
+                    <p class="gallery-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, quia!</p>
               </figure>
         </div>
     </main>
     <!--Start of the main body -->
     <footer>
-        <p></p>Copyright&copyEgypt 2021
+        <p>Copyright&copyEgypt 2021</p>
     </footer>
 </body>
 </html>
