Added the contact page

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/about.html">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="hero-about">
@@ -26,7 +26,7 @@
     <main >
         <div id="about">
             <h1>About Egypt</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque libero, reprehenderit vero ab laborum voluptates consequatur! Et laborum fuga adipisci aliquam quidem a, aperiam quam magnam aliquid non sequi autem, dolorum eaque necessitatibus excepturi, ipsum blanditiis repudiandae eius minima. Labore eaque quae expedita accusamus eum officiis repellat, modi iusto cumque maxime delectus quaerat laborum eius accusantium est sint voluptates, odio culpa nesciunt dignissimos impedit nisi nam velit. Asperiores dolores deserunt, accusantium expedita architecto corrupti aspernatur a. Ratione accusantium et provident magnam, blanditiis sed atque perspiciatis inventore eius reiciendis laboriosam exercitationem nihil saepe dolores nobis illo, deserunt fuga eligendi iusto ea.</p>
+            <p>Egypt is acountry located in the northeastern corner of Africa. Egypt’s heartland, the Nile River valley and delta, was the home of one of the principal civilizations of the ancient Middle East and, like Mesopotamia farther east, was the site of one of the world’s earliest urban and literate societies. Pharaonic Egypt thrived for some 3,000 years through a series of native dynasties that were interspersed with brief periods of foreign rule. After Alexander the Great conquered the region in 323 BCE, urban Egypt became an integral part of the Hellenistic world. Under the Greek Ptolemaic dynasty, an advanced literate society thrived in the city of Alexandria, but what is now Egypt was conquered by the Romans in 30 BCE. It remained part of the Roman Republic and Empire and then part of Rome’s successor state, the Byzantine Empire, until its conquest by Arab Muslim armies in 639–642 CE.</p>
         </div>
     </main>
     <!--Start of the main body -->
