--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/about.html">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="hero-image">
@@ -27,7 +27,7 @@
         <div>
             <h1>Traveling to Egypt</h1>
             <section>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates quibusdam voluptate fuga laudantium quisquam deserunt dolore! Eligendi totam rerum reprehenderit nihil mollitia perspiciatis tempore sit quisquam debitis, fuga quaerat. Iusto illum eum similique suscipit saepe cum quisquam maxime facere architecto voluptates incidunt aspernatur possimus pariatur asperiores vel sapiente, ipsa reiciendis.</p>
+                <p>When planning on going to Egypt it is agreat place for a holiday or historical destination. Make sure that you bring the right gear as it will be very hot there depending on what time of year you go there are losts of places to visit such as as The Cario Mosque and Alexandria's Castle and there are also serveral temples such as Karnak Temple.</p>
             </section>
         </div>
         <!-- Gallery within the main area -->
@@ -35,19 +35,20 @@
         <div class="gallery">
             <!-- <figcaption>The Cario Mosque Egypt.</figcaption> -->
             <figure class=”gallery__item gallery__item--1">
-                <figcaption>The Cario Mosque Egypt.</figcaption>
-                    <img src="assets/images/cairo-mosque.jpg" class="gallery__img" alt="Image 1">
-                    <p class="gallery-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, quia!</p>
+                <figcaption>Mosque-Madrassa of Sultan Hassan.</figcaption>
+                    <img src="assets/images/cairo-mosque.jpg" class="gallery__img" alt="mosque">
+                    <p class="gallery-text">The Mosque-Madrasa of Sultan Hassan is a monumental mosque and madrasa located in the historic district of Cairo, Egypt. It was built between 1356 and 1363.</p>
               </figure>
               <figure class="gallery__item gallery__item--2">
-                <figcaption>Castle Alexandria.</figcaption>
-                    <img src="assets/images/castle-alexandria.jpg" class="gallery__img" alt="Image 2">
-                    <p class="gallery-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, quia!</p>
+                <figcaption>Alexandria's Castle.</figcaption>
+                    <img src="assets/images/castle-alexandria.jpg" class="gallery__img" alt="castle">
+                    <p class="gallery-text">The Citadel of Qaitbay is a 15th-century defensive fortress located on the Mediterranean sea coast, in Alexandria, Egypt. It was established in 1477 AD.</p>
+                    <!--It was built between 1356 and 1363 during the Bahri Mamluk period, commissioned by Sultan an-Nasir Hasan.-->
               </figure>
               <figure class="gallery__item gallery__item--3">
                 <figcaption>The Karnak Temple.</figcaption>
-                    <img src="assets/images/karnak-temple.jpg" class="gallery__img" alt="Image 3">
-                    <p class="gallery-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, quia!</p>
+                    <img src="assets/images/karnak-temple.jpg" class="gallery__img" alt="temple">
+                    <p class="gallery-text">The Karnak Temple dates back from around 2055 BC to around 100 AD. It was built as a cult temple and was dedicated to the gods Amun.</p>
               </figure>
         </div>
     </main>
