Fixed bug with quotation in the figure element

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
         <!-- Gallery within the main area -->
         <h2>Gallery</h2>
         <div class="gallery">
-            <!-- <figcaption>The Cario Mosque Egypt.</figcaption> -->
-            <figure class=”gallery__item gallery__item--1">
+            <figure class="gallery__item gallery__item--1">
                 <figcaption>Mosque-Madrassa of Sultan Hassan.</figcaption>
                     <img src="assets/images/cairo-mosque.jpg" class="gallery__img" alt="mosque">
                     <p class="gallery-text">The Mosque-Madrasa of Sultan Hassan is a monumental mosque and madrasa located in the historic district of Cairo, Egypt. It was built between 1356 and 1363.</p>
