--- a/about.html
+++ b/about.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Egypt</title>
+    <title>About</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" href="assets/images/pyramid.png" sizes="any">
 </head>
 <body>
     <!--Start of the header -->
