--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Egypt</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" href="assets/images/pyramid.png" sizes="any">
 </head>
 <body>
     <!--Start of the header -->
@@ -24,7 +25,9 @@
     <!--End of the header -->
     <!-- Start of the main area -->
     <main >
+        
         <h1>Contact Us</h1>
+        <p>012 924 5834 | infoegypt@gmail.com</p>
     </main>
     <!--Start of the main body -->
     <footer>
