Added media queries

--- a/about.html
+++ b/about.html
@@ -27,12 +27,14 @@
     <main >
         <div id="about">
             <h1>About Egypt</h1>
+            <section class="main-text">
             <p>Egypt is acountry located in the northeastern corner of Africa. Egypt’s heartland, the Nile River valley and delta, was the home of one of the principal civilizations of the ancient Middle East and, like Mesopotamia farther east, was the site of one of the world’s earliest urban and literate societies. Pharaonic Egypt thrived for some 3,000 years through a series of native dynasties that were interspersed with brief periods of foreign rule. After Alexander the Great conquered the region in 323 BCE, urban Egypt became an integral part of the Hellenistic world. Under the Greek Ptolemaic dynasty, an advanced literate society thrived in the city of Alexandria, but what is now Egypt was conquered by the Romans in 30 BCE. It remained part of the Roman Republic and Empire and then part of Rome’s successor state, the Byzantine Empire, until its conquest by Arab Muslim armies in 639–642 CE.</p>
+            </section>
         </div>
     </main>
     <!--Start of the main body -->
     <footer>
-        <p class="copyright">Copyright&copyEgypt 2021</p>
+        <p>All Rights Reserved Copyright&copyEgypt 2021</p>
     </footer>
 </body>
 </html>
