--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
     </main>
     <!--Start of the main body -->
     <footer>
-        <p class="copyright">Copyright&copyEgypt 2021</p>
+        <p>All Rights Reserved Copyright&copyEgypt 2021</p>
     </footer>
 </body>
 </html>
