--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
         <div>
             <h1>Traveling to Egypt</h1>
-            <section>
+            <section class="main-text">
                 <p>When planning on going to Egypt it is agreat place for a holiday or historical destination. Make sure that you bring the right gear as it will be very hot there depending on what time of year you go there are losts of places to visit such as as The Cario Mosque and Alexandria's Castle and there are also serveral temples such as Karnak Temple.</p>
             </section>
         </div>
@@ -35,26 +35,26 @@
         <h2>Gallery</h2>
         <div class="gallery">
             <figure class="gallery__item gallery__item--1">
-                <figcaption>Mosque-Madrassa of Sultan Hassan.</figcaption>
                     <img src="assets/images/cairo-mosque.jpg" class="gallery__img" alt="mosque">
+                    <figcaption>Mosque-Madrassa of Sultan Hassan.</figcaption>
                     <p class="gallery-text">The Mosque-Madrasa of Sultan Hassan is a monumental mosque and madrasa located in the historic district of Cairo, Egypt. It was built between 1356 and 1363.</p>
               </figure>
               <figure class="gallery__item gallery__item--2">
-                <figcaption>Alexandria's Castle.</figcaption>
                     <img src="assets/images/castle-alexandria.jpg" class="gallery__img" alt="castle">
+                    <figcaption>Alexandria's Castle.</figcaption>
                     <p class="gallery-text">The Citadel of Qaitbay is a 15th-century defensive fortress located on the Mediterranean sea coast, in Alexandria, Egypt. It was established in 1477 AD.</p>
                     <!--It was built between 1356 and 1363 during the Bahri Mamluk period, commissioned by Sultan an-Nasir Hasan.-->
               </figure>
               <figure class="gallery__item gallery__item--3">
-                <figcaption>The Karnak Temple.</figcaption>
                     <img src="assets/images/karnak-temple.jpg" class="gallery__img" alt="temple">
+                    <figcaption>The Karnak Temple.</figcaption>
                     <p class="gallery-text">The Karnak Temple dates back from around 2055 BC to around 100 AD. It was built as a cult temple and was dedicated to the gods Amun.</p>
               </figure>
         </div>
     </main>
     <!--Start of the main body -->
     <footer>
-        <p>Copyright&copyEgypt 2021</p>
+        <p>All Rights Reserved Copyright&copyEgypt 2021</p>
     </footer>
 </body>
 </html>
