Fixed figure element

--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
         <!-- Gallery within the main area -->
         <h2>Gallery</h2>
         <div class="gallery">
-            <figure class="gallery__item gallery__item--1">
+            <figure>
                     <img src="assets/images/cairo-mosque.jpg" class="gallery__img" alt="mosque">
                     <figcaption>Mosque-Madrassa of Sultan Hassan.</figcaption>
                     <p class="gallery-text">The Mosque-Madrasa of Sultan Hassan is a monumental mosque and madrasa located in the historic district of Cairo, Egypt. It was built between 1356 and 1363.</p>
               </figure>
-              <figure class="gallery__item gallery__item--2">
+              <figure>
                     <img src="assets/images/castle-alexandria.jpg" class="gallery__img" alt="castle">
                     <figcaption>Alexandria's Castle.</figcaption>
                     <p class="gallery-text">The Citadel of Qaitbay is a 15th-century defensive fortress located on the Mediterranean sea coast, in Alexandria, Egypt. It was established in 1477 AD.</p>
                     <!--It was built between 1356 and 1363 during the Bahri Mamluk period, commissioned by Sultan an-Nasir Hasan.-->
               </figure>
-              <figure class="gallery__item gallery__item--3">
+              <figure>
                     <img src="assets/images/karnak-temple.jpg" class="gallery__img" alt="temple">
                     <figcaption>The Karnak Temple.</figcaption>
                     <p class="gallery-text">The Karnak Temple dates back from around 2055 BC to around 100 AD. It was built as a cult temple and was dedicated to the gods Amun.</p>
