--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     <!-- Start of the main area -->
     <main>
         <div>
-            <h1>Traveling to Egypt</h1>
+            <h1>Egypt</h1>
             <section class="main-text">
                 <p>When planning on going to Egypt it is agreat place for a holiday or historical destination. Make sure that you bring the right gear as it will be very hot there depending on what time of year you go there are losts of places to visit such as as The Cario Mosque and Alexandria's Castle and there are also serveral temples such as Karnak Temple.</p>
             </section>
         </div>
-        <!-- Gallery within the main area -->
+        <!-- Gallery inside the main area -->
         <h2>Gallery</h2>
         <div class="gallery">
             <figure>
