Added Features to read me and testing bugs

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Description" content="A historical webiste about Egypt"/>
     <title>Contact</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" href="assets/images/pyramid.png" sizes="any">
@@ -27,6 +28,15 @@
     <main >
         
         <h1>Contact Us</h1>
+        <form action="post">
+            <label for="fname">First name:</label>
+            <input type="text" id="fname" name="fname" value="First name"><br>
+            <label for="lname">Last name:</label>
+            <input type="text" id="lname" name="lname" value="Last name"><br>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" value="your email"><br><br>
+            <input class="myButton" type="submit" value="Submit">
+          </form>
         <p>012 924 5834 | infoegypt@gmail.com</p>
     </main>
     <!--Start of the main body -->
