--- a/contact.html
+++ b/contact.html
@@ -28,15 +28,8 @@
     <main >
         
         <h1>Contact Us</h1>
-        <form action="post">
-            <label for="fname">First name:</label>
-            <input type="text" id="fname" name="fname" value="First name"><br>
-            <label for="lname">Last name:</label>
-            <input type="text" id="lname" name="lname" value="Last name"><br>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" value="your email"><br><br>
-            <input class="myButton" type="submit" value="Submit">
-          </form>
+        <p>Thanks for conatacting us</p>
+        <p>Hope to see you again.</p>
         <p>012 924 5834 | infoegypt@gmail.com</p>
     </main>
     <!--Start of the main body -->
