Fixed from-feedback file

--- a/form-feedback.html
+++ b/form-feedback.html
@@ -26,7 +26,7 @@
     <!--End of the header -->
     <!-- Start of the main area -->
     <main >
-          <p>Thanks for conatacting us</p>
+          <p>Thanks for contacting us</p>
 
         <p>012 924 5834 | infoegypt@gmail.com</p>
     </main>
