Edited some text

--- a/form-feedback.html
+++ b/form-feedback.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
         <div class="hero-contact">
-            <h1 id="contact-text">Contact us</h1>
+            <h1 id="contact-text">Thanks for Contacting us</h1>
         </div>
     </header>
     <!--End of the header -->
