--- a/contact.html
+++ b/contact.html
@@ -26,17 +26,37 @@
     <!--End of the header -->
     <!-- Start of the main area -->
     <main >
-        
         <h1>Contact Us</h1>
-        <form action="form-feedback.html" method="GET">
-            <label for="fname">First name:</label>
-            <input type="text" id="fname" name="fname" value="First name"><br>
-            <label for="lname">Last name:</label>
-            <input type="text" id="lname" name="lname" value="Last name"><br>
+        <div class="form">
+            <form action="form-feedback.html" method="get"> 
+                <div class="input-container ic1">
+                    <label for="firstname" class="placeholder">First name</label>
+                    <input id="firstname" class="input" type="text" placeholder="First Name" />
+                    <div class="cut"></div>
+                </div>
+                <div class="input-container ic2">
+                    <label for="lastname" class="placeholder">Last name</label><br>
+                    <input id="lastname" class="input" type="text" placeholder="Last Name " />
+                    <div class="cut"></div>
+                </div>
+                <div class="input-container ic2">
+                    <label for="email" class="placeholder">Email</label><br>
+                    <input id="email" class="input" type="text" placeholder="Your Email"/>
+                    <div class="cut cut-short"></div>
+                <button type="text" class="myButton">submit</button>
+            </form>
+        </div>
+        <!-- <form action="form-feedback.html" method="post">
+            <label for="fname">First Name</label>
+            <input type="text" id="fname" name="firstname" placeholder="Your name.."><br>
+        
+            <label for="lname">Last Name</label>
+            <input type="text" id="lname" name="lastname" placeholder="Your last name.."><br>
+
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" value="your email"><br><br>
             <input class="myButton" type="submit" value="Submit">
-        </form>
+        </form> -->
 
         <p>012 924 5834 | infoegypt@gmail.com</p>
     </main>
